--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/a/qmm017.a.style.css
@@ -12,6 +12,9 @@
     margin-top: 10px;
     min-width: 600px;
 }
+.tab-row .row {
+    margin-top: 10px;
+}
 .fixed-flex-layout > .fixed-flex-layout-left {
     margin-right: -10px;
 }
@@ -80,4 +83,12 @@
     vertical-align: top;
     display: inline-block;
     margin-left: 20px;
+}
+.cal-container {
+    vertical-align: top;
+    display: inline-block;
+}
+.cal-container button {
+    height: 30px;
+    width: 30px;
 }
