Server màn H QMM019

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/h/index.xhtml
@@ -61,7 +61,7 @@
                 </div>
                 <div class="cell valign-center">
                     <!--H1_7-->
-                    <div class="label" data-bind="text: layoutPatternText"/>
+                    <div class="label" data-bind="text: layoutPatternCloneText"/>
                 </div>
             </div>
             <div class="table table2">
