--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/040/a/index.xhtml
@@ -42,14 +42,14 @@
         <div id="tabpanel-1" role="tabpanel1">
             <div class="sidebar-content-header" style="width: 1100px">
 
-                <div class="title" data-bind="text : titleTab"></div>
+                <div class="title" data-bind="text : titleTab"/>
                 <button tabindex="1" class="proceed" data-bind="click:registerAmount ,enable: $root.errors.isEmpty">#{i18n.getText('QMM040_2')}</button>
                 <a tabindex="9" class="goout" style="margin-left: 600px"
-                   data-bind="ntsLinkButton: { jump: 'linkbutton.xhtml' }">#{i18n.getText('QMM040_21')}</a>
+                   data-bind="ntsLinkButton: { jump: '../../039/a/index.xhtml' }">#{i18n.getText('QMM040_21')}</a>
 
             </div>
             <div class="contents-area fixed-flex-layout">
-                <div  id="com-ccg001"></div>
+                <div  id="com-ccg001"/>
                 <div id="panel-left" class="fixed-flex-layout-left margin-top" style="margin-left: 100px;min-width: 385px;">
                     <div style="float: left;width: 335px;">
 
@@ -86,7 +86,7 @@
 
                     </div>
                     <div style="float: left;height: 400px;width: 50px;margin-top: 130px;">
-                        <span id="custom-caret" class="caret-right"></span>
+                        <span id="custom-caret" class="caret-right"/>
                     </div>
 
 
@@ -98,16 +98,16 @@
 
                         <div data-bind="ntsFormLabel: { required: false}">#{i18n.getText('QMM040_10')}</div>
                         <!--A5_2 項目区分-->
-                        <div style="margin-left: 40px;min-width:60px;" data-bind="text: itemClassification()"></div>
+                        <div style="margin-left: 40px;min-width:60px;" data-bind="text: itemClassification()"/>
                     </div>
 
                     <div class="flex valign-center margin-top-item">
                         <!--A5_3 コード・名称-->
                         <div data-bind="ntsFormLabel: {  required: false}">#{i18n.getText('QMM040_12')}</div>
                         <!--A5_4 コード-->
-                        <span class="label margin-left-item" data-bind="text: individualPriceCode()"></span>
+                        <span class="label margin-left-item" data-bind="text: individualPriceCode()"/>
                         <!--A5_5 名称-->
-                        <span style="margin-left: 5px" class="label" data-bind="text: individualPriceName()"></span>
+                        <span style="margin-left: 5px" class="label" data-bind="text: individualPriceName()"/>
                     </div>
 
                     <div class="flex valign-center margin-top-item" style="margin-bottom: 20px">
@@ -115,7 +115,7 @@
                         <div data-bind="ntsFormLabel: {  required: true}">#{i18n.getText('QMM040_13')}</div>
                         <!--A5_7 基準年月-->
                         <div id="A5_7" tabindex="5" class="margin-left-item"
-                             data-bind="ntsDatePicker: {value: yearMonthFilter, dateFormat: 'yearmonth', name:'#[QMM040_13]',required: true}"></div>
+                             data-bind="ntsDatePicker: {value: yearMonthFilter, dateFormat: 'yearmonth', name:'#[QMM040_13]',required: true}"/>
                         <!--A5_8 抽出-->
                         <button tabindex="6" class="caret-bottom" data-bind="click: filterData ,enable: $root.errors.isEmpty"
                                 style="margin-left: 13px">#{i18n.getText('QMM040_14')}</button>
@@ -141,9 +141,9 @@
                         </thead>
                         <tbody data-bind="foreach: personalDisplay">
                         <tr>
-                            <td data-bind="text: employeeCode()"></td>
-                            <td data-bind="text: businessName()"></td>
-                            <td data-bind="text: period"></td>
+                            <td data-bind="text: employeeCode()"/>
+                            <td data-bind="text: businessName()"/>
+                            <td data-bind="text: period"/>
                             <td>
                                 <input tabindex="8" style="width: 120px" data-bind="ntsNumberEditor: {
                                         value: amount,
