qmm017 update mockup ui

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/017/b/index.xhtml
@@ -10,7 +10,7 @@
              data-bind="text: formulaCode"></div>
         <span style="margin-left: 20px; width: 270px; vertical-align: text-bottom " class="limited-label"
               data-bind="text: formulaName"></span>
-        <button data-bind = "click: $vm.doConfiguration">#{i18n.getText('QMM017_27')}</button>
+        <button id = "B1_4" data-bind = "click: $vm.doConfiguration">#{i18n.getText('QMM017_27')}</button>
         <div style = "display: inline-block" data-bind = "text: displaySettingMethod"></div>
     </div>
 </ui:composition>
