fix bug #125972, change #125634 QMM039

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/b/index.xhtml
@@ -21,7 +21,7 @@
         <div id="contents-area">
             <div style="width: 500px">
                 <div class="label dialog-title">#{i18n.getText('QMM039_26')}</div>
-                <div class="flex valign-center" style="margin-top: 20px">
+                <div class="flex valign-center" style="margin-top: 20px; margin-left: 10px;">
                     <div style="width: 150px; display: inline-block;"
                          data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM039_23')}</div>
                     <div tabindex="1" id="B1_3" style="margin-left: 5px;"
@@ -29,7 +29,7 @@
                     <span style="margin-left: 5px"> ～ 9999/12</span>
                 </div>
 
-                <div style="margin-top: 15px;">
+                <div style="margin-top: 15px; margin-left: 10px;">
                     <div style="width: 150px; display: inline-block;"
                          data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM039_28')}</div>
                     <div style="width: 280px;display: inline-flex">
