--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/c/index.xhtml
@@ -24,7 +24,7 @@
         <div id="contents-area">
             <div style="width: 500px">
                 <div class="label dialog-title">#{i18n.getText('QMM039_33')}</div>
-                <div style="margin-top: 20px;">
+                <div style="margin-top: 20px; margin-left: 10px;">
                     <div style="width: 150px;"
                          data-bind="ntsFormLabel: {required: false}">#{i18n.getText('QMM039_34')}</div>
                     <div style="width: 200px; display: inline-flex">
